cluster/main-instances/garage/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: s3
  namespace: garage-cluster
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
  hostnames:
    - "s3.svc.maio-tech.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 0s
        backendRequest: 300s
      backendRefs:
        - name: garage-main-cluster
          port: 3900
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: s3-traffic-policy
  namespace: garage-cluster
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: s3
  loadBalancer:
    type: LeastRequest
